apps/vtde/src-tauri/error.txt
    Checking vtde v0.1.0 (C:\dev\apps\vtde\src-tauri)
warning: unused imports: `Result as SqlResult` and `params`
 --> src\database_explorer.rs:1:16
  |
1 | use rusqlite::{params, Connection, Result as SqlResult};
  |                ^^^^^^              ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Deserialize`
 --> src\database_explorer.rs:2:13
  |
2 | use serde::{Deserialize, Serialize};
  |             ^^^^^^^^^^^

error[E0277]: the trait bound `u64: FromSql` is not satisfied
   --> src\database_explorer.rs:69:77
    |
 69 |             let row_count: u64 = conn.query_row(&count_query, [], |row| row.get(0)).unwrap_or(0);
    |                                                                             ^^^ the trait `FromSql` is not implemented for `u64`
    |
    = help: the following other types implement trait `FromSql`:
              f32
              f64
              i16
              i32
              i64
              i8
              isize
              u16
            and 2 others
note: required by a bound in `Row::<'_>::get`
   --> C:\Users\fresh_zxae3v6\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\rusqlite-0.38.0\src\row.rs:285:32
    |
285 |     pub fn get<I: RowIndex, T: FromSql>(&self, idx: I) -> Result<T> {
    |                                ^^^^^^^ required by this bound in `Row::<'_>::get`

For more information about this error, try `rustc --explain E0277`.
warning: `vtde` (lib) generated 2 warnings
error: could not compile `vtde` (lib) due to 1 previous error; 2 warnings emitted
